# electrophysiology-experiment-simulator

./: .gitignore  LICENSE  README.md  _config.yml  pyproject.toml
src/electrophysiology_experiment_simulator/: pinpoint_interactive_graphs_demo.ipynb  urchin_interactive_graphs_demo.ipynb
